--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,8 @@ html, body {
 
 canvas {
   display: block;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: transparent;
 }
 
 #wrapper {
